Update pipeline gitsync

--- a/.harness/gitsync.yaml
+++ b/.harness/gitsync.yaml
@@ -46,6 +46,7 @@ pipeline:
                                     projectID: <+input>
                                     imageName: <+input>
                                     tags: <+input>
+                                    buildArgs: <+input>
                                     optimize: true
               variables: []
     properties:
