Update pipeline gitsync

--- a/.harness/gitsync.yaml
+++ b/.harness/gitsync.yaml
@@ -52,5 +52,6 @@ pipeline:
     properties:
         ci:
             codebase:
-                connectorRef: account.testGitConnectorp45c3PcMXu
+                connectorRef: bitbucket
+                repoName: springboot
                 build: <+input>
