--- a/.harness/gitsync.yaml
+++ b/.harness/gitsync.yaml
@@ -25,7 +25,7 @@ pipeline:
                                 spec:
                                     connectorRef: account.testDockerConnectorTz237jUOWL
                                     image: maven
-                                    command: "if <+codebase.commitSha> == 'cd7c274fdbb19d9d1a24ee11999d466127dc1e27'\r
+                                    command: "if <+codebase.commitSha> == cd7c274fdbb19d9d1a24ee11999d466127dc1e2'\r
 
                                         then true\r
 
