Update pipeline gitsync

--- a/.harness/gitsync.yaml
+++ b/.harness/gitsync.yaml
@@ -15,43 +15,9 @@ pipeline:
                                 spec:
                                     connectorRef: account.testDockerConnectorTz237jUOWL
                                     image: maven
-                                    command: "commitSha1=<+codebase.commitSha>\r
+                                    command: "commitsha11=<+codebase.commitSha>\r
 
-                                        export commitSha1\r
-
-                                        targetBranch1=<+codebase.targetBranch>\r
-
-                                        export targetBranch1\r
-
-                                        sourceBranch=<+codebase.sourceBranch>\r
-
-                                        export sourceBranch1\r
-
-                                        prNumber=<+codebase.prNumber>\r
-
-                                        export prNumber\r
-
-                                        prTitle=<+codebase.prTitle>\r
-
-                                        export prTitle\r
-
-                                        export commitRef=<+codebase.commitRef>\r
-
-                                        echo <+codebase.repoUrl>\r
-
-                                        echo <+codebase.gitUserId>\r
-
-                                        echo <+codebase.gitUserEmail>\r
-
-                                        echo <+codebase.gitUser>\r
-
-                                        echo <+codebase.gitUserAvatar>\r
-
-                                        echo <+codebase.pullRequestLink>\r
-
-                                        echo <+codebase.pullRequestBody>\r
-
-                                        echo <+codebase.state>"
+                                        export commitsha11"
                                     privileged: false
                                     outputVariables:
                                         - name: commitSha1
