--- a/.harness/testinggit.yaml
+++ b/.harness/testinggit.yaml
@@ -13,10 +13,10 @@ connector:
         type: UsernameToken
         spec:
           username: dushyant.sharma@harness.io
-          tokenRef: dushyanttoken
+          tokenRef: dushyantoke
     apiAccess:
       type: Token
       spec:
-        tokenRef: dushyanttoken
+        tokenRef: dushyantoke
     executeOnDelegate: false
     type: Repo
