Update pipeline gitsync

--- a/.harness/gitsync.yaml
+++ b/.harness/gitsync.yaml
@@ -15,10 +15,9 @@ pipeline:
                                 spec:
                                     connectorRef: account.testDockerConnectorTz237jUOWL
                                     image: maven
-                                    command: |-
-                                        echo <+codebase.pullRequestLink>
-                                        echo <+codebase.pullRequestBody>
+                                    command: |
                                         echo <+codebase.state>
+                                        echo <+codebase.pullRequestBody>
                                     privileged: false
                                 name: run1
                                 identifier: run1
