Update pipeline gitsync

--- a/.harness/gitsync.yaml
+++ b/.harness/gitsync.yaml
@@ -15,21 +15,7 @@ pipeline:
                                 spec:
                                     connectorRef: account.testDockerConnectorTz237jUOWL
                                     image: maven
-                                    command: |-
-                                        targetBranch1=<+codebase.targetBranch>
-                                        export targetBranch1
-                                        sourceBranch=<+codebase.sourceBranch>
-                                        export sourceBranch1
-                                        prNumber=<+codebase.prNumber>
-                                        export prNumber
-                                        echo <+codebase.prTitle>
-                                        echo <+codebase.repoUrl>
-                                        echo <+codebase.gitUserId>
-                                        echo <+codebase.gitUserEmail>
-                                        echo <+codebase.gitUser>
-                                        echo <+codebase.gitUserAvatar>
-                                        echo <+codebase.pullRequestLink>
-                                        echo <+codebase.state>
+                                    command: echo <+codebase.commitRef>
                                     privileged: false
                                 name: run1
                                 identifier: run1
